kubernetes/infrastructure/central-services.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-service
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: hub-service
  template:
    metadata:
      labels:
        app: hub-service
    spec:
      containers:
      - image: cxtsiacr.azurecr.io/semantics/hub:catenax-at-home-latest
        imagePullPolicy: Always
        name: hub-service
        ports:
        - containerPort: 4242 # API
        - containerPort: 8090 # JDB
---
apiVersion: v1
kind: Service
metadata:
  name: hub-service
spec:
  type: ClusterIP
  ports:
  - port: 4242
    name: api
    targetPort: 4242
  selector:
    app: hub-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hub-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/semantic/hub"
spec:
  tls:
    - hosts:
        - catenax-at-home.demo.catena-x.net
      secretName: catenax-at-home-secret
  rules:
    - host: catenax-at-home.demo.catena-x.net
      http:
        paths:
          - path: /semantic/hub(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: hub-service
                port:
                  number: 4242
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-service
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: registry-service
  template:
    metadata:
      labels:
        app: registry-service
    spec:
      containers:
      - image: cxtsiacr.azurecr.io/semantics/registry:catenax-at-home-latest
        imagePullPolicy: Always
        name: registry-service
        ports:
        - containerPort: 4243 # API
        - containerPort: 8090 # JDB
---
apiVersion: v1
kind: Service
metadata:
  name: registry-service
spec:
  type: ClusterIP
  ports:
  - port: 4243
    name: api
    targetPort: 4243
  selector:
    app: registry-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/twin"
spec:
  tls:
    - hosts:
        - catenax-at-home.demo.catena-x.net
      secretName: catenax-at-home-secret
  rules:
    - host: catenax-at-home.demo.catena-x.net
      http:
        paths:
          - path: /twin(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: registry-service
                port:
                  number: 4243
