kubernetes/infrastructure/consumer-aas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-aas-proxy
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: consumer-aas-proxy
  template:
    metadata:
      labels:
        app: consumer-aas-proxy
    spec:
      containers:
      - image: cxtsiacr.azurecr.io/edc/consumer-aas-proxy:catenax-at-home-latest
        imagePullPolicy: Always
        name: hub-service
        ports:
        - containerPort: 4245 # API
        - containerPort: 8090 # JDB
---
apiVersion: v1
kind: Service
metadata:
  name: consumer-aas-proxy
spec:
  type: ClusterIP
  ports:
  - port: 4245
    name: api
    targetPort: 4245
  selector:
    app: consumer-aas-proxy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consumer-aas-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/consumer"
spec:
  tls:
    - hosts:
        - catenax-at-home.demo.catena-x.net
      secretName: catenax-at-home-secret
  rules:
    - host: catenax-at-home.demo.catena-x.net
      http:
        paths:
          - path: /consumer(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: consumer-aas-proxy
                port:
                  number: 4245
